[project]
name = "postassist"
version = "1.0.0"
description = "PostAssist - AI-powered LinkedIn post generation for machine learning papers"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "arxiv>=2.2.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langchain-qdrant>=0.2.0",
    "langgraph==0.5.1",
    "pymupdf>=1.26.3",
    "pyppeteer>=2.0.0",
    "tavily-python>=0.7.9",
    "mermaid-python>=0.1.0",
    "sync>=1.0.0",
    "graphviz>=0.20.1",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    "redis>=5.0.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "python-jose>=3.4.0",
    "python-jose-cryptodome>=1.0.0"
]
